# slim-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  pytest.ini  repos.json  requirements.txt  slim-cli.py  slim-cli_use-ai_test.py  slim-registry.json
.github/: release.yml
.github/workflows/: publish-to-pypi.yml  semantic-release.yml
src/jpl/slim/: __init__.py  app.py  cli.py  docgen.py  testgen.py
src/jpl/slim/best_practices/: __init__.py  base.py  docgen.py  docs_website.py  governance.py  practice_mapping.py  secrets_detection.py  standard.py
src/jpl/slim/best_practices/docs_website_impl/: __init__.py  config_updater.py  content_validator.py  generator.py  helpers.py  markdown_linter.py  site_reviser.py  template_manager.py
src/jpl/slim/commands/: __init__.py  apply_command.py  apply_deploy_command.py  common.py  deploy_command.py  examples.py  generate_docs_command.py  generate_tests_command.py  list_command.py  models_command.py
src/jpl/slim/docgen/: generator.py  site_reviser.py
src/jpl/slim/docgen/analyzer/: __init__.py  content_extractor.py  repo_analyzer.py
src/jpl/slim/docgen/content/: __init__.py  api_generator.py  contributing_generator.py  development_generator.py  installation_generator.py  overview_generator.py
src/jpl/slim/docgen/enhancer/: __init__.py  ai_enhancer.py
src/jpl/slim/docgen/template/: __init__.py  config_updater.py  template_manager.py
src/jpl/slim/docgen/utils/: helpers.py
src/jpl/slim/manager/: __init__.py  best_practices_manager.py
src/jpl/slim/mcp/: __init__.py  server.py
src/jpl/slim/mcp/configs/examples/: __init__.py
src/jpl/slim/mcp/docs/: README.md  installation.md  integration.md
src/jpl/slim/mcp/scripts/: start_mcp_server.sh  start_server.py
src/jpl/slim/mcp/tools/: README.md  SUMMARY.md  __init__.py  ai_tools.py  comprehensive_ai_tools.py  config.py  demo.py  enhanced_tools.py  examples.py  prompts.py  requirements.txt  resources.py  server.py  test_server.py  tools.py  utils.py
src/jpl/slim/prompts/: __init__.py  prompts.yaml
src/jpl/slim/utils/: __init__.py  ai_utils.py  cli_utils.py  git_utils.py  io_utils.py  prompt_utils.py  repo_utils.py
tests/: best_practices_test_commands.yaml  conftest.py
tests/integration/: best_practices_test_commands.yaml  test_best_practice_commands.py  test_governance_best_practices.py  test_standard_best_practices.py
tests/jpl/slim/: test_best_practices.py  test_best_practices_manager.py  test_cli.py  test_litellm_integration.py  test_secrets_detection.py
tests/jpl/slim/cli/: __init__.py  test_best_practice_commands.py  test_best_practice_docs_website.py  test_best_practice_secrets_detection.py  test_best_practice_standard.py  test_cli.py
tests/jpl/slim/utils/: __init__.py  test_ai_utils.py  test_ai_utils_enhanced.py  test_git_utils.py  test_helpers.py  test_io_utils.py  test_prompt_utils.py  test_repo_utils.py
